Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54610

QTreeView header misbehaviour.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.9.4
    • 5.6.0
    • Widgets: Itemviews
    • None
    • 93dabeba9dc5f6cbab60e65b3cc8df5fe48745a9

    Description

      1. QTreeView::header() _q_layoutAboutToBeChanged() private slot triggered on model layoutAboutToBeChanged() signal, but QTreeView::header() _q_layoutChanged() private slot not triggered on model layoutChanged() signal.
      2. QTreeView::header() _q_layoutAboutToBeChanged() private slot not triggered on model rowsAboutToBeMoved() signal, but QTreeView::header() _q_layoutChanged() private slot triggered on header model rowsMoved() signal.
      3. In combination it causes bad things. See attachment.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chehrlic Christian Ehrlicher
            kaliginsergey Sergey Kaligin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes